@@ -426,6 +426,9 @@ Trunk (Unreleased)
     HDFS-9789. Correctly update DataNode's scheduled block size when writing
     small EC file. (jing9)
 
+    HDFS-9794. Streamer threads may leak if failure happens when closing the
+    striped outputstream. (jing9)
+
     BREAKDOWN OF HDFS-7285 SUBTASKS AND RELATED JIRAS
 
       HDFS-7347. Configurable erasure coding policy for individual files and
